// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput.vue tests state messages any: should display the correct state message 1`] = `
<div class="stateMsg text-center">

</div>
`;

exports[`SearchInput.vue tests state messages error: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  Error connecting to OpenProject
</div>
`;

exports[`SearchInput.vue tests state messages no-token: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  No OpenProject account connected
</div>
`;

exports[`SearchInput.vue tests work packages multiselect search list should display correct options list of search results 1`] = `
<div class="workpackage__workPackage">
  <div class="row">
    <div class="row__status" style="background-color: blue;">
      <div class="row__status__title">
        in-progress
      </div>
    </div>
    <div class="row__id">
      #1 -
    </div>
    <div class="row__project">
      test
    </div>
  </div>
  <div class="row">
    <div class="row__subject"><span class="row__subject__type" style="color: red;">
					task
				</span>
      Organize work-packages
    </div>
  </div>
  <div class="row">
    <div class="row__assignee">
      <div class="row__assignee__avatar">
        <avatar-stub size="23" url="/server/index.php/apps/integration_openproject/avatar?userId=1&amp;userName=System" user="test" display-name="test" class="item-avatar"></avatar-stub>
      </div>
      <div class="row__assignee__assignee">
        test
      </div>
    </div>
  </div>
</div>
`;
